@@ -10,12 +10,17 @@ New in this Isabelle version
 
   types
     nat ~> Nat.nat
+    * ~> Product_Type,*
     + ~> Sum_Type.+
 
   constants
     Ball ~> Set.Ball
     Bex ~> Set.Bex
     Suc ~> Nat.Suc
+    Pair ~> Product_Type.Pair
+    fst ~> Product_Type.fst
+    snd ~> Product_Type.snd
+    split ~> Product_Type.split
     curry ~> Product_Type.curry
 
 INCOMPATIBILITY.
